# dotmax

./: .gitignore  .rustfmt.toml  BRAILLE_GRAPHICS_MASTER_PLAN.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  test_svg.rs  test_svg_fix.rs
.claude/: settings.local.json
benches/: animation.rs  braille_mapping.rs  color_apply.rs  color_conversion.rs  color_rendering.rs  color_schemes.rs  core_rendering.rs  density.rs  dithering.rs  extreme_image_pipeline.rs  image_conversion.rs  image_processing.rs  image_resize.rs  media_detection.rs  media_playback.rs  primitives.rs  quick.rs  rendering.rs  svg_rendering.rs
docs/: PRD.md  animation_guide.md  architecture.md  bmm-brainstorming-session-2025-11-14.md  bmm-workflow-status.yaml  dependencies.md  epics.md  getting_started.md  implementation-readiness-report-2025-11-14.md  performance.md  research-technical-2025-11-14.md  sprint-change-proposal-2025-11-20.md  terminal-compatibility.md  troubleshooting.md  tuning-mode.md
examples/: README.md  animated_apng.rs  animated_gif.rs  animation_buffer.rs  braille_mapping_demo.rs  circles_demo.rs  circles_demo_simple.rs  color_conversion_demo.rs  color_demo.rs  color_detection.rs  color_image.rs  color_schemes_demo.rs  colored_shapes.rs  colored_shapes_simple.rs  compare_all_sizes.rs  compare_resize_filters.rs  custom_image.rs  custom_scheme.rs  density_demo.rs  differential_demo.rs  dither_comparison.rs  fps_control.rs  generate_apng_fixtures.rs  generate_extreme_test_images.rs  generate_readme_examples.rs  heatmap.rs  hello_braille.rs  (+29 more)
(+223 files in other folders)
